<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/anaRenk"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="192dp"
        android:layout_height="328dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_0a99538_a576_4316_9e9b_5300b98f01cc_size780x1170_quality100_cropcenter" />

    <TextView
        android:id="@+id/textViewProductName"
        android:layout_width="224dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="156dp"
        android:text="@string/ProductName"
        android:textColor="@color/yaziRenk1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewFiyat"
        android:layout_width="118dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="160dp"
        android:text="@string/Price"
        android:textAlignment="center"
        android:textColor="@color/yaziRenk2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toEndOf="@+id/textViewProductName"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.514" />

    <TextView
        android:id="@+id/textViewDesc"
        android:layout_width="381dp"
        android:layout_height="107dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Description"
        android:textColor="@color/yaziRenk2"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProductName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/SelectSize"
        android:textColor="@color/yaziRenk1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSizeM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/yaziRenk1"
        android:text="@string/SizeM"
        android:textAlignment="textStart"
        android:textColor="@color/anaRenk"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSizeL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/buttonSizeS" />

    <Button
        android:id="@+id/buttonSizeS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/yaziRenk1"
        android:text="@string/SizeS"
        android:textAlignment="textStart"
        android:textColor="@color/anaRenk"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSizeM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.23000002"
        app:layout_constraintVertical_chainStyle="packed"
        app:strokeColor="#A66F6F" />

    <Button
        android:id="@+id/buttonSizeXL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/yaziRenk1"
        android:text="@string/SizeXl"
        android:textAlignment="textStart"
        android:textColor="@color/anaRenk"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewFiyat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/buttonSizeL" />

    <Button
        android:id="@+id/buttonSizeL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/yaziRenk1"
        android:text="@string/SizeL"
        android:textAlignment="textStart"
        android:textColor="@color/anaRenk"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSizeXL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/buttonSizeM" />

    <Button
        android:id="@+id/buttonEkle"
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/yaziRenk1"
        android:text="@string/AddChart"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDesc" />

    <TextView
        android:id="@+id/textViewBaslik"
        android:layout_width="357dp"
        android:layout_height="38dp"
        android:background="@color/yaziRenk1"
        android:backgroundTint="@color/yaziRenk1"
        android:fontFamily="@font/amarante"
        android:text="@string/Name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>